[package]
name = "rust_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.7", features = ["tls", "tls-roots"] }
prost = "0.10"
tokio = { version = "1", features = ["full"] }
base64 = "0.13"

[build-dependencies]
tonic-build = "0.7"
